# nickel-cms

./: .travis.yml  Cargo.toml  README.md
confing/: config.toml
src/: build.rs  config.rs  lib.rs  main.rs
src/admin/: mod.rs
src/admin/handlers/: main.rs  mod.rs  pages.rs
src/admin/models/: mod.rs  pages.rs
src/middleware/: form_validator.rs  mod.rs  render.rs  render_tera.rs
static/themes/admin/css/: buttons.css  style.css
static/themes/admin/js/: pages.create.js
templates/: header.rs.html  hello.html  hello.rs.html
templates/admin/helpers/: active.rs.html
templates/admin/layout/: footer.rs.html  header.rs.html  main.html  sidebar.rs.html
templates/admin/main/: index.rs.html  tst.rs_.html
templates/admin/pages/: create.rs.html  form.rs.html  formjs.rs.html  index.rs.html  options.rs.html  tabs.rs.html
templates/helpers/: css.rs.html  js.rs.html
