[package]
name = "nickel-cms"
version = "0.3.0"
authors = ["Evgeny Ukhanov <mrlsd@ya.ru>"]
build = "src/build.rs"

[dependencies]
nickel = "*"
rustc-serialize = "*"
serde_derive = "*"
serde = "*"
toml = "0.3.*"
nickel_postgres = "*"
ructe = "*"
tera = "*"
lazy_static = "*"

[build-dependencies]
ructe = "*"